# Mangos-Zero-server-old

./: 1129119-macpatch.txt  CMakeLists.txt  LICENSE.mdown  README.mdown
cmake/: ImportACE.cmake  ImportTBB.cmake
contrib/: CMakeLists.txt
contrib/extractor/: CMakeLists.txt  Makefile  System.cpp  ad  dbcfile.cpp  dbcfile.h  mpq_libmpq.cpp  mpq_libmpq.h
contrib/git_id/: CMakeLists.txt  git_id.cpp
contrib/mmap/: CMakeLists.txt  mmap_extract.py  readme
contrib/mysql_to_pgsql/: CMakeLists.txt
contrib/vmap_assembler/: CMakeLists.txt  README  vmap_assembler.cpp
contrib/vmap_extractor_v3/: CMakeLists.txt  README
dep/: CMakeLists.txt
dep/ACE_wrappers/: CMakeLists.txt
dep/StormLib/: CMakeLists.txt
dep/recastnavigation/: CMakeLists.txt
dep/recastnavigation/RecastDemo/: CMakeLists.txt
dep/recastnavigation/RecastDemo/Include/: ConvexVolumeTool.h  CrowdManager.h  CrowdTool.h  Debug.h  Filelist.h  InputGeom.h  MeshLoaderObj.h  NavMeshTesterTool.h  OffMeshConnectionTool.h  Sample.h  SampleInterfaces.h  Sample_Debug.h  Sample_SoloMeshSimple.h  Sample_SoloMeshTiled.h  Sample_TileMesh.h  SlideShow.h  TestCase.h  ValueHistory.h  imgui.h
dep/recastnavigation/RecastDemo/Source/: ChunkyTriMesh.cpp  ConvexVolumeTool.cpp  CrowdManager.cpp  CrowdTool.cpp  Debug.cpp  Filelist.cpp  InputGeom.cpp  MeshLoaderObj.cpp  NavMeshTesterTool.cpp  OffMeshConnectionTool.cpp  SDLMain.m  Sample.cpp  SampleInterfaces.cpp  Sample_Debug.cpp  Sample_SoloMeshSimple.cpp  Sample_SoloMeshTiled.cpp  Sample_TileMesh.cpp  SlideShow.cpp  TestCase.cpp  ValueHistory.cpp  imgui.cpp  imguiRenderGL.cpp  main.cpp
dep/src/: CMakeLists.txt
dep/tbb/: CMakeLists.txt
doc/: EventAI.txt  script_commands.txt
sql/: characters.sql  create_mysql.sql  mangos.sql  realmd.sql
sql/tools/: README
sql/updates/: README  z1807_xxxxx_01_mangos_spell_proc_event.sql  z1809_xxxxx_01_mangos_spell_affect.sql  z1814_11827_01_mangos_creature_linking_template.sql  z1819_11831_01_mangos_mangos_string.sql  z1819_11831_02_mangos_command.sql  z1824_xxxxx_01_mangos_spell_affect.sql  z1838_xxxxx_01_mangos_drop_tbc.sql  z1839_xxxxx_01_mangos_creature_linking_template.sql  z1840_xxxxx_01_mangos_creature_template.sql  z1841_xxxxx_01_mangos_spell_template.sql  z1842_xxxxx_01_mangos_spell_template.sql
src/: CMakeLists.txt
src/bindings/: CMakeLists.txt
src/framework/: CMakeLists.txt
src/game/: AccountMgr.cpp  AccountMgr.h  AddonHandler.cpp  AddonHandler.h  AggressorAI.cpp  AggressorAI.h  AuctionHouseHandler.cpp  AuctionHouseMgr.cpp  AuctionHouseMgr.h  Bag.cpp  Bag.h  BattleGround.cpp  BattleGround.h  BattleGroundAB.cpp  BattleGroundAB.h  (+240 more)
win/: mangosdVC100.sln
(+245 files in other folders)
